# ait

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.toml.example
.github/workflows/: release.yaml
src/: ai.rs  app.rs  chats.rs  cli.rs  config.rs  event.rs  handler.rs  lib.rs  logger.rs  main.rs  models.rs  snippets.rs  storage.rs  tui.rs  ui.rs
themes/: thorn-dark-warm.tmTheme
