[package]
name = "ait"
version = "0.5.2"
authors = ["Wilhelm Söderkvist Vermelin <wilhelm.wermelin@icloud.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/wilswer/ait"
description = "AIT is a terminal based chat interface for interacting with large language models from various providers."
readme = "README.md"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream", "use-dev-tty", "libc"] }
directories = "6.0"
futures = "0.3"
genai = "0.5"
ratatui = { version = "0.30", features = ["unstable-widget-ref"] }
ratatui-explorer = {git = "https://github.com/tatounee/ratatui-explorer.git", rev="6ae483b"}
rusqlite = { version = "0.38", features = ["bundled"] }
syntect = "5.2"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tui-big-text = "0.8"
ratatui-textarea = "0.8"

[profile.release]
strip = true
